--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,6 @@
 //fonts
 
-$font-neue: 'Neue Montreal';
+$font-neue: "Neue Montreal",-apple-system,BlinkMacSystemFont,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Segoe UI,sans-serif;
 
 //colors 
 
