--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -1,3 +1,8 @@
 %page-padding {
-    padding: 2rem;
+    padding:0 2rem ;
+
+    @media (max-width: 500px){
+        padding-left: 1rem;
+        padding-right:1rem;
+    }
 }
