added marquee iteraton one

--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -3,7 +3,7 @@
 
 .navbar{
     @extend %page-padding;
-    position:fixed;
+    position:absolute;
     width:100%;
     display:flex;
     flex-wrap:nowrap;
