--- a/sections/introSection/introSection.module.scss
+++ b/sections/introSection/introSection.module.scss
@@ -1,8 +1,8 @@
 @import '@/styles/variables';
-
+@import '@/styles/utils';
 
 .intro{
-    width:100%;
+    //width:100%;
     height:100vh;
     background-size:cover;
     background-position:center;
@@ -12,6 +12,21 @@
     margin:0;
     padding:0;
     z-index:2;
+    display:flex;
+    display:flex;
+    align-items:space-between;
+    &__main{
+        display:flex;
+        flex-direction: column;
+        align-self: flex-end;
+        margin-bottom:2rem;
+    }
+    &__info{
+        @extend %page-padding;
+        display:flex;
+        justify-content:space-between;
+        z-index:inherit;
+    }
 
     // &__background{
     //     width: inherit;
