--- a/components/marqueetxt/marqueetxt.module.scss
+++ b/components/marqueetxt/marqueetxt.module.scss
@@ -4,10 +4,9 @@
 .marquee{
     width:100vw;
     font-family:inherit;
-    font-size:120px;
+    font-size:110px;
     font-weight:500;
     color:#fff;
-    letter-spacing: 5px;
     @media(max-width:1024px){
         font-size:100px;
     }
@@ -18,6 +17,12 @@
     span{
         margin-right:1rem;
         margin-left:1rem;
+        display:flex;
+        align-items:center;
+        b{
+            margin-left:1rem;
+            margin-top:1rem;
+        }
     }
    
 }
