--- a/components/metric/metric.module.scss
+++ b/components/metric/metric.module.scss
@@ -1,7 +1,98 @@
+@import '@/styles/variables';
+
 
 .metric{
    width:100%;
-   max-width:500px;
-   height:200px;
-   background:rgba(255, 255, 255, 0.479);
+   max-width:450px;
+   height:auto;
+   background:transparent;
+   border:.1px solid #f2f2f221;
+   display:grid;
+   // grid-template-columns:200px 100px;
+   grid-template-rows:40px 1fr 55px;
+   border-radius:10px;
+   @media(max-width:660px){
+      width:100%;
+      max-width:100%;
+   }
+
+   &__link{
+      background:$col-pink-800;
+      border-bottom-left-radius:10px;
+      border-bottom-right-radius:10px;
+      width:calc(100% + 1px);
+      cursor:pointer;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:0 20px;
+      color:#fff;
+      font-family:inherit;
+      font-weight:600;
+      font-size:.9rem;
+
+      span:hover{
+         transition:transform .1s ease-in;
+         transform:rotate(45deg);  
+      }
+   }
+   &__ts{
+      
+       color:$shadow-light;
+       padding-left:1.5rem;
+       padding-top:2rem;
+       margin-bottom:.5rem;
+       @media(max-width:860px){
+         font-size:.95rem;
+      }
+      
+   }
+   &__info{
+      display:grid;
+      grid-template-columns:170px 1fr;
+      padding:1.5rem;
+      h3{
+         color:#fff;
+         font-family:inherit;
+         font-weight:500;
+         font-size:2rem;
+         // margin-top:.6rem;
+         @media(max-width:860px){
+            font-size:1.5rem;
+         }
+      }
+     
+      p{
+         color:$shadow-light;
+         margin-top:.3rem;
+         @media(max-width:860px){
+            font-size:.95rem;
+         }
+      }
+   }
+   &__sales{
+      display: grid;
+      align-items:center;
+      align-self: center;
+      height:fit-content;
+     
+      // p{
+      //    margin-top:.3rem;
+      // }
+      
+   }
+   &__tokens{
+     
+      height:fit-content;
+      // margin-top:2rem;
+      // margin-bottom:2rem;
+      padding-left:1rem;
+      border-left:2px solid #f2f2f221;
+      display: grid;
+      align-items:center;
+      align-self: center;
+      // h3{
+      //    margin-top:2.5rem;
+      // }
+   }
 }
