--- a/sections/introSection/introSection.module.scss
+++ b/sections/introSection/introSection.module.scss
@@ -31,6 +31,7 @@
         margin-top:1rem;
         @media(max-width:860px){
             display:block;
+            margin-right:0.55rem;
         }
     }
     &__txt{
