--- a/sections/socialSection/socialSection.module.scss
+++ b/sections/socialSection/socialSection.module.scss
@@ -4,13 +4,47 @@
 .social{
     @extend %page-padding;
     padding-top:2rem;
-
     &__info{
-        display:none;
-        
+        display:flex;
+        padding:1rem 1rem;
+        justify-content:space-between;
+        border:1px solid $col-dark-200;
+        border-radius:10px;
+        font-size:.95rem;
+        cursor:pointer;  
+        margin-top:1rem;
         @media(max-width:860px){
-            display:flex;
-            justify-content:center;
+            display:block;
+            border:none;
+            padding:1rem 0;
         }
+    }
+    &__links{
+        display:flex;
+        @media(max-width:860px){
+            border-top:1px solid $col-dark-200;
+            margin-top:.5rem;
+            padding-top:.5rem;
+        }
+        
+        p{
+           margin-left:1rem;
+           padding-left:1rem;
+           border-left:1px solid $col-dark-200;
+           @media (max-width:860px) {
+                margin-left:0;
+                margin-right:1rem;
+           }
+        }
+    }
+
+   
+}
+.info{
+    display:none;
+    
+    @media(max-width:860px){
+        display:flex;
+        justify-content:center;
     }
 }
