--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -12,6 +12,7 @@
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     transition: position 1s;
+    z-index:98;
     
     @media(max-width: 760px){
         background:#fff;
