--- a/components/swiper/swiper.module.scss
+++ b/components/swiper/swiper.module.scss
@@ -11,13 +11,18 @@
     @media (max-width: 1024px){
        margin:auto;
     }
+    @media (max-width: 500px){
+        height:580px;
+        grid-template-rows:1fr 150px;
+        // background:red;
+    }
      &__pick{
          width:100%;
          height:100%;
         //  background:red;
          border-radius: 10px;
          position:relative;
-         padding:2rem;
+         padding:1.8rem;
          display:flex;
          justify-content:space-between;
          flex-direction:column;
@@ -42,16 +47,20 @@
              
          }
          &_info{
-            background:teal;
+            // background:teal;
             width:fit-content;
             
             h2{
                color:#fff;
                font-family:inherit;
+               margin-top:1rem;
+               font-size:2rem;
+               font-weight:500;
             }
             p{
                 color:$shadow-light;
                 font-size:.9rem;
+                font-weight:600;
 
             }
         }
@@ -60,9 +69,9 @@
              position:relative;
          }
          &_link{
-             width:40px;
-             height:40px;
-             border-radius:50%;
+             width:50px;
+             height:50px;
+             border-radius:10px;
              object-fit: cover;
              object-position: center;
              margin-right:10px;
