--- a/components/swiper/swiper.module.scss
+++ b/components/swiper/swiper.module.scss
@@ -13,6 +13,7 @@
     }
     @media (max-width: 500px){
         height:580px;
+        width:100%;
         grid-template-rows:1fr 150px;
         // background:red;
     }
