--- a/components/swiper/swiper.module.scss
+++ b/components/swiper/swiper.module.scss
@@ -55,7 +55,7 @@
              width:100%;
              height:100%;
              z-index:-1;
-             background-image:url('https://res.cloudinary.com/dqzhuopqp/image/upload/v1645545433/samples/QmQFwLNhKKJK6uS3msto6aLMEceqB2N4vRoENhzP7aMZXM_xaqdsj.jpg');
+             background-image:linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url('https://res.cloudinary.com/dqzhuopqp/image/upload/v1645545433/samples/QmQFwLNhKKJK6uS3msto6aLMEceqB2N4vRoENhzP7aMZXM_xaqdsj.jpg');
              background-size: cover;
              background-repeat: no-repeat;
              background-position: center;
