--- a/sections/introSection/introSection.module.scss
+++ b/sections/introSection/introSection.module.scss
@@ -2,7 +2,8 @@
 @import '@/styles/utils';
 
 .intro{
-    //width:100%;
+    width:100%;
+    position:relative;
     height:100vh;
     background-size:cover;
     background-position:center;
@@ -15,11 +16,25 @@
     display:flex;
     display:flex;
     align-items:space-between;
+    &_box{
+        position:absolute;
+        content:'';
+        top:0;
+        left:0;
+        background-size:cover;
+        background-position:center;
+        background-repeat:no-repeat;
+        background-image:linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)), url('https://res.cloudinary.com/dqzhuopqp/image/upload/v1645365083/samples/JuliaMain_scelkx.jpg');
+        width:100%;
+        height:100%;
+        z-index:1;
+    }
     &__main{
         display:flex;
         flex-direction: column;
         align-self: flex-end;
         margin-bottom:2.5rem;
+        z-index: 5;
     }
     &__info{
         @extend %page-padding;
