--- a/components/swiper/swiper.module.scss
+++ b/components/swiper/swiper.module.scss
@@ -84,6 +84,12 @@
          &_links{
              display:flex;
              position:relative;
+             
+            svg{
+                position:absolute;
+                left:-4.7px;
+                top:-4.8px;
+            }
          }
          &_link{
              width:50px;
