--- a/components/swiper/swiper.module.scss
+++ b/components/swiper/swiper.module.scss
@@ -87,8 +87,12 @@
              
             svg{
                 position:absolute;
-                left:-4.7px;
+                left:115.7px;
                 top:-4.8px;
+                transition:.2s;
+                // -4.7px;
+                //55.7px;
+                //115.7px;
             }
          }
          &_link{
