--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -36,23 +36,23 @@ button{
     text-decoration:none;
 }
 
-::-webkit-scrollbar {
-    width: 9px;
-  }
+// ::-webkit-scrollbar {
+//     width: 9px;
+//   }
   
-  ::-webkit-scrollbar-track {
-    background: $col-pink-300;
-  }
+//   ::-webkit-scrollbar-track {
+//     background: $col-pink-300;
+//   }
   
-  ::-webkit-scrollbar-thumb {
-    transition: 1s;
-    background: $shadow-dark;
-    border-radius:10px;
+//   ::-webkit-scrollbar-thumb {
+//     transition: 1s;
+//     background: $shadow-dark;
+//     border-radius:10px;
    
-  }
+//   }
   
-  ::-webkit-scrollbar-thumb:hover {
-    transition:1s;
-    background:$col-pink-800;
+//   ::-webkit-scrollbar-thumb:hover {
+//     transition:1s;
+//     background:$col-pink-800;
     
-  }
+//   }
