--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -31,6 +31,8 @@ p {
   -webkit-font-smoothing: antialiased;
   text-decoration:none;
   box-decoration-break:none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
 }
 
 button{
