--- a/components/exploreLink/exploreLink.module.scss
+++ b/components/exploreLink/exploreLink.module.scss
@@ -29,7 +29,7 @@
         font-family:inherit;
         font-size:70px;
         font-weight:500;
-        line-height:.95;
+        // line-height:.95;
         max-width:80%;
         @media(max-width: 700px){
            font-size:40px;
