--- a/components/mobNav/mobNav.module.scss
+++ b/components/mobNav/mobNav.module.scss
@@ -38,6 +38,7 @@
     &__credit{
         margin-top:1rem;
         display:block;
+        text-align: center;
     }
     &__links{
         list-style:none;
