--- a/components/exploreLink/exploreLink.module.scss
+++ b/components/exploreLink/exploreLink.module.scss
@@ -13,6 +13,11 @@
     @media(max-width: 700px){
         min-height:100px !important;
         margin-top:1rem;
+       
+    }
+    @media(max-width:500px){
+        padding:1rem;
+        max-height:100px !important;
     }
     svg{
         
@@ -22,6 +27,9 @@
         cursor:pointer;
         @media(max-width: 700px){
             width:60px !important;
+        }
+        @media(max-width:500px){
+            width:50px !important;
         }
     }
     h2{
@@ -34,6 +42,9 @@
         @media(max-width: 700px){
            font-size:40px;
         }
+        @media(max-width: 500px){
+            font-size:35px;
+         }
     }
     &__info{
         display:flex;
