--- a/components/preloader/preloader.module.scss
+++ b/components/preloader/preloader.module.scss
@@ -17,6 +17,6 @@
     line-height:1.3;
     font-size:30px;
     @media (max-width:500px){
-         font-size:1rem;
+         font-size:20px;
     }
 }
