--- a/components/swiper/swiper.module.scss
+++ b/components/swiper/swiper.module.scss
@@ -89,7 +89,7 @@
          &_links{
              display:flex;
              position:relative;
-             
+             z-index:0;
             svg{
                 position:absolute;
                 left:115.7px;
